JavaFX integration